# agentX-agentDemo

./: .env.example  .gitignore  Agent-App.md  BuyDown.md  CLAUDE.md  Makefile  PRD.md  README.md  langgraph.json  package-lock.json  pyproject.toml  soup.py  v2.md
.github/workflows/: integration-tests.yml
src/react_agent/: configuration.py  custom_get_rate_tool.py  custom_get_rate_tool_v2.py  custom_get_rate_tool_v3.py  deal_graph.py  embed.py  file_handler.py  graph.py  index_graph.py  loanx_get_rate_tool.py  prompts.py  state.py  tools.py  upsert_memory.py  utils.py  webapp.py
src/react_agent/security/: auth.py
src/react_agent/tools/: document_analysis.py  summary.py
src/react_agent/tools/utils/: document_type_strategies.py  file_handler.py
